Initial element styling and viewport functionality.

--- a/elements/webgl-editor.html
+++ b/elements/webgl-editor.html
@@ -9,14 +9,14 @@
     width: calc(100% - var(--attribute-view-width));
     height: 100%;
     float: left;
-    background: #ff0000;
+    background: #ff00ff; /* debug magenta */
   }
   editor-attribute-view
   {
     width: var(--attribute-view-width);
     height: 100%;
     float: right;
-    background: #0000ff;
+    background: #333333;
   }
 </style>
 
