--- a/elements/editor-viewport.html
+++ b/elements/editor-viewport.html
@@ -1,12 +1,8 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<script src="../bower_components/three.js/build/three.js"></script>
 
 <dom-module id="editor-viewport">
   <template></template>
 </dom-module>
 
-<script>
-  Polymer
-  ({
-    is: "editor-viewport"
-  });
-</script>
+<script src="editor-viewport.js"></script>
