Hide weird viewport overflow.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
       padding: 0;
     }
     html { height: 100%; }
-    body { height: 100%; }
+    body
+    {
+      height: 100%;
+      overflow: hidden;
+    }
   </style>
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="elements/webgl-editor.html">
