--- a/elements/webgl-editor.html
+++ b/elements/webgl-editor.html
@@ -23,7 +23,7 @@
 <dom-module id="webgl-editor">
   <template>
     <editor-viewport is-animated={{animationStatus}}></editor-viewport>
-    <editor-attribute-view status=[[animationStatus]]></editor-attribute-view>
+    <editor-attribute-view status={{animationStatus}}></editor-attribute-view>
   </template>
 </dom-module>
 
