Properly scope CSS.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>webgl-editor</title>
-  <style>
+  <style is="custom-style">
     *
     {
       margin: 0;
