--- a/elements/editor-attribute-view.html
+++ b/elements/editor-attribute-view.html
@@ -2,15 +2,55 @@
 
 <dom-module id="editor-attribute-view">
   <style>
+    :root { --attribute-list-element-padding: 2px; }
+    * { margin: 0; padding: 0; }
     div
     {
       padding: 16px;
       background: white;
       font-family: monospace;
+      overflow: hidden;
+    }
+    div ul { list-style-type: none; }
+    div ul li
+    {
+      width: calc(50% - (2 * var(--attribute-list-element-padding)));
+      height: 18px;
+      line-height: 18px;
+      float: left;
+      padding: var(--attribute-list-element-padding);
+    }
+    div ul li input
+    {
+      width: 100%;
+      font-family: monospace;
     }
   </style>
   <template>
-    <div>Animation: <input type="checkbox" checked="{{status::change}}"></div>
+    <div>
+      <ul>
+        <li>Translate X:</li>
+        <li><input type="number" step="any" value={{translateX::change}}></li>
+        <li>Translate Y:</li>
+        <li><input type="number" step="any" value={{translateY::change}}></li>
+        <li>Translate Z:</li>
+        <li><input type="number" step="any" value={{translateZ::change}}></li>
+        <li>Rotate X:</li>
+        <li><input type="number" step="any" value={{rotateX::change}}></li>
+        <li>Rotate Y:</li>
+        <li><input type="number" step="any" value={{rotateY::change}}></li>
+        <li>Rotate Z:</li>
+        <li><input type="number" step="any" value={{rotateZ::change}}></li>
+        <li>Scale X:</li>
+        <li><input type="number" step="any" value={{scaleX::change}}></li>
+        <li>Scale Y:</li>
+        <li><input type="number" step="any" value={{scaleY::change}}></li>
+        <li>Scale Z:</li>
+        <li><input type="number" step="any" value={{scaleZ::change}}></li>
+        <li>Animation:</li>
+        <li><input type="checkbox" checked="{{animationStatus::change}}"></li>
+      </ul>
+    </div>
   </template>
 </dom-module>
 
@@ -21,7 +61,16 @@
 
     properties:
     {
-      status: { type: Boolean, notify: true }
+      translateX: { type: Number, notify: true },
+      translateY: { type: Number, notify: true },
+      translateZ: { type: Number, notify: true },
+      rotateX:    { type: Number, notify: true },
+      rotateY:    { type: Number, notify: true },
+      rotateZ:    { type: Number, notify: true },
+      scaleX:     { type: Number, notify: true },
+      scaleY:     { type: Number, notify: true },
+      scaleZ:     { type: Number, notify: true },
+      animationStatus: { type: Boolean, notify: true }
     }
   });
 </script>
