--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
       margin: 0;
       padding: 0;
     }
-    html { height: 100%; }
+
+    html
+    {
+      height: 100%;
+    }
+
     body
     {
       height: 100%;
       overflow: hidden;
     }
   </style>
-  <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
-  <link rel="import" href="elements/webgl-editor.html">
+  <script src="lib/webcomponentsjs/webcomponents-lite.min.js"></script>
+  <link rel="import" href="elements/webgl-editor/webgl-editor.html">
 </head>
 <body>
   <webgl-editor></webgl-editor>
