Bind transformations using sub-properties.

--- a/elements/editor-attribute-view/editor-attribute-view.html
+++ b/elements/editor-attribute-view/editor-attribute-view.html
@@ -6,23 +6,23 @@
     <div>
       <ul>
         <li>Translate X:</li>
-        <li><input type="number" step="any" value={{translateX::change}}></li>
+        <li><input type="number" step="any" value={{mesh.position.x::change}}></li>
         <li>Translate Y:</li>
-        <li><input type="number" step="any" value={{translateY::change}}></li>
+        <li><input type="number" step="any" value={{mesh.position.y::change}}></li>
         <li>Translate Z:</li>
-        <li><input type="number" step="any" value={{translateZ::change}}></li>
+        <li><input type="number" step="any" value={{mesh.position.x::change}}></li>
         <li>Rotate X:</li>
-        <li><input type="number" step="any" value={{rotateX::change}}></li>
+        <li><input type="number" step="any" value={{mesh.rotation.z::change}}></li>
         <li>Rotate Y:</li>
-        <li><input type="number" step="any" value={{rotateY::change}}></li>
+        <li><input type="number" step="any" value={{mesh.rotation.y::change}}></li>
         <li>Rotate Z:</li>
-        <li><input type="number" step="any" value={{rotateZ::change}}></li>
+        <li><input type="number" step="any" value={{mesh.rotation.z::change}}></li>
         <li>Scale X:</li>
-        <li><input type="number" step="any" value={{scaleX::change}}></li>
+        <li><input type="number" step="any" value={{mesh.scale.x::change}}></li>
         <li>Scale Y:</li>
-        <li><input type="number" step="any" value={{scaleY::change}}></li>
+        <li><input type="number" step="any" value={{mesh.scale.y::change}}></li>
         <li>Scale Z:</li>
-        <li><input type="number" step="any" value={{scaleZ::change}}></li>
+        <li><input type="number" step="any" value={{mesh.scale.z::change}}></li>
         <li>Animation:</li>
         <li><input type="checkbox" checked="{{animationStatus::change}}"></li>
       </ul>
