Handle rotation unit conversion.

--- a/elements/editor-attribute-view/editor-attribute-view.html
+++ b/elements/editor-attribute-view/editor-attribute-view.html
@@ -12,11 +12,11 @@
         <li>Translate Z:</li>
         <li><input type="number" step="any" value={{mesh.position.x::change}}></li>
         <li>Rotate X:</li>
-        <li><input type="number" step="any" value={{mesh.rotation.z::change}}></li>
+        <li><input type="number" step="any" value={{rotation.z::change}}></li>
         <li>Rotate Y:</li>
-        <li><input type="number" step="any" value={{mesh.rotation.y::change}}></li>
+        <li><input type="number" step="any" value={{rotation.y::change}}></li>
         <li>Rotate Z:</li>
-        <li><input type="number" step="any" value={{mesh.rotation.z::change}}></li>
+        <li><input type="number" step="any" value={{rotation.z::change}}></li>
         <li>Scale X:</li>
         <li><input type="number" step="any" value={{mesh.scale.x::change}}></li>
         <li>Scale Y:</li>
