--- a/elements/webgl-editor/webgl-editor.html
+++ b/elements/webgl-editor/webgl-editor.html
@@ -5,8 +5,8 @@
 <dom-module id="webgl-editor">
   <link rel="stylesheet" href="webgl-editor.css">
   <template>
-    <editor-viewport mesh={{mesh}} animation-status={{animationStatus}}></editor-viewport>
-    <editor-attribute-view mesh={{mesh}} animation-status={{animationStatus}}></editor-attribute-view>
+    <editor-viewport mesh={{mesh}} rotation={{rotation}} animation-status={{animationStatus}}></editor-viewport>
+    <editor-attribute-view mesh={{mesh}} rotation={{rotation}} animation-status={{animationStatus}}></editor-attribute-view>
   </template>
 </dom-module>
 
