Fetch three.js from npm
The new three.js revision has a properly versioned package on npm.

--- a/elements/editor-viewport/editor-viewport.html
+++ b/elements/editor-viewport/editor-viewport.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../../lib/polymer/polymer.html">
-<script src="../../lib/three.js/build/three.js"></script>
+<script src="../../node_modules/three.js/build/three.js"></script>
 
 <dom-module id="editor-viewport">
   <template></template>
