Move Bower packages from lib/ to bower_components/
lib/ is required for editor-specific libraries. Also, the exact version
of Polymer is now specified.

--- a/elements/editor-attribute-view/editor-attribute-view.html
+++ b/elements/editor-attribute-view/editor-attribute-view.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../../lib/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
 
 <dom-module id="editor-attribute-view">
   <link rel="stylesheet" href="editor-attribute-view.css">
