--- a/elements/webgl-editor/webgl-editor.html
+++ b/elements/webgl-editor/webgl-editor.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../../lib/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../editor-viewport/editor-viewport.html">
 <link rel="import" href="../editor-attribute-view/editor-attribute-view.html">
 
