--- a/elements/editor-viewport/editor-viewport.html
+++ b/elements/editor-viewport/editor-viewport.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../../lib/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
 <script src="../../node_modules/three.js/build/three.js"></script>
 
 <dom-module id="editor-viewport">
